<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Menus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configurações</string>
    <string name="sobre">Sobre</string>
    <string name="autor">App desenvolvido por Douglas</string>
    <string name="outros">Outros</string>
    <string name="azul">Azul</string>
    <string name="novo">Novo</string>

</resources>
