<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.edu.qi.menus.MainActivity" >

    <item
        android:id="@+id/action_novo"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/novo"
        android:icon="@android:drawable/ic_menu_add" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
     	android:id="@+id/action_sobre"
     	android:orderInCategory="200"
     	android:showAsAction="never"
     	android:title="@string/sobre" />
    
    <item
        android:id="@+id/action_outros"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/outros">
        
        <menu>
            
            <item 
                android:id="@+id/action_azul"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/azul" />
            
        </menu>
        
    </item>

</menu>
